testament/tests/shouldfail/toutput.nim
discard """
  output: '''
  done
  '''
"""

echo "broken"
